Fix middlesection overflowing its container

--- a/css/editing.css
+++ b/css/editing.css
@@ -51,6 +51,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    min-width: 0;
     height: 100%;
   }
 
